--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,60 +1,9 @@
 body{
-    background-color: darkseagreen;
+    background-color: rgb(202, 202, 202);
 }
 
-button {
-    outline: none;
-    height: 40px;
-    text-align: center;
-    width: 130px;
-    border-radius: 40px;
-    background: #fff;
-    border: 2px solid #1ECD97;
-    color: #1ECD97;
-    letter-spacing: 1px;
-    text-shadow: 0;
-    font-size: 12px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: all 0.25s ease;
-}
-button:hover {
-    color: white;
-    background: #1ECD97;
-}
-button:active {
-    letter-spacing: 2px;
-}
-button:after {
-    content: "ADD TASK";
-}
 
-.onclic {
-    width: 40px;
-    border-color: #bbbbbb;
-    border-width: 3px;
-    font-size: 0;
-    border-left-color: #1ECD97;
-    -webkit-animation: rotating 2s 0.25s linear infinite;
-    animation: rotating 2s 0.25s linear infinite;
-}
-.onclic:after {
-    content: "";
-}
-.onclic:hover {
-    color: #1ECD97;
-    background: white;
-}
 
-.validate {
-    font-size: 13px;
-    color: white;
-    background: #1ECD97;
-}
-.validate:after {
-    font-family: "FontAwesome";
-    content: "";
-}
 
 
 
