--- a/templates/index.html
+++ b/templates/index.html
@@ -24,12 +24,27 @@
 
 <div>
     <form method="post">
-        <div>
-            <input type="text" name="name" id="name" placeholder="write your task">
+        <div class="form-outline">
+            <input type="text" id="text" name="name" class="form-control" />
+            <label class="form-label" for="typeText">Add Task</label>
         </div>
         <div>
-            <button type="submit" id="button"></button>
+            <button type="submit" class="btn btn-success btn-rounded" id="button">ADD</button>
+        </div>
+    </form>
+    
+</div>
+
+<div>
+    <form method="put">
+        <div class="form-outline">
+            <input type="text" id="id" name="id" class="form-control" />
+            <label class="form-label" for="typeText">Update Task</label>
+        </div>
+        <div>
+            <button type="submit" class="btn btn-info btn-rounded" id="button">UPDATE</button>
         </div>
     </form>
 </div>
+
 {% endblock %}
