--- a/templates/index.html
+++ b/templates/index.html
@@ -6,45 +6,34 @@
         {% for t in response.completed %}
             <li>
                 {{t.name}}
+                <a href="/delete/{{t.id}}" class="btn btn-danger btn-rounded">DELETE</a>
             </li>
         {% endfor %}
     </ol>
 </div>
-
 <div>
     <h1>Tareas Incompletas</h1>
     <ol>
         {% for t in response.incompleted %}
             <li>
                 {{t.name}}
+                <a href="/update/{{t.id}}" class="btn btn-info btn-rounded">UPDATE</a>
+                <a href="/delete/{{t.id}}" class="btn btn-danger btn-rounded">DELETE</a>
             </li>
         {% endfor %}
     </ol>
 </div>
-
+<br>
 <div>
-    <form method="post">
+    <form method="POST">
         <div class="form-outline">
-            <input type="text" id="text" name="name" class="form-control" />
+            <input type="text" id="name" name="name" class="form-control" required/>
             <label class="form-label" for="typeText">Add Task</label>
         </div>
         <div>
             <button type="submit" class="btn btn-success btn-rounded" id="button">ADD</button>
         </div>
     </form>
-    
 </div>
-
-<div>
-    <form method="put">
-        <div class="form-outline">
-            <input type="text" id="id" name="id" class="form-control" />
-            <label class="form-label" for="typeText">Update Task</label>
-        </div>
-        <div>
-            <button type="submit" class="btn btn-info btn-rounded" id="button">UPDATE</button>
-        </div>
-    </form>
-</div>
-
+<br>
 {% endblock %}
